--- a/01-LearnJava/.gitignore
+++ b/01-LearnJava/.gitignore
@@ -11,7 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar # 保留一些第三方库的学习记录
 *.war
 *.nar
 *.ear
@@ -22,3 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# 自定义
+/out
+/.idea
+LearnJava.iml
